add builders to descriptors and use them in flow maps