@@ -1,13 +1,12 @@
 package org.openlca.io.maps;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.Test;
 import org.openlca.core.model.descriptors.FlowDescriptor;
@@ -16,47 +15,52 @@ public class StatusTest {
 
 	@Test
 	public void testFromToString() {
-		int[] states = { Status.OK, Status.WARNING, Status.ERROR };
-		String[] messages = { "is ok", "a warning", "some error" };
-		List<Status> list = Arrays.stream(new int[] { 0, 1, 2 })
-				.mapToObj(i -> new Status(states[i], messages[i]))
-				.map(status -> status.toString())
-				.map(s -> Status.fromString(s))
-				.collect(Collectors.toList());
+		int[] states = {
+			MappingStatus.OK,
+			MappingStatus.WARNING,
+			MappingStatus.ERROR };
+		String[] messages = {
+			"is ok",
+			"a warning",
+			"some error" };
+		List<MappingStatus> list = Arrays.stream(new int[]{0, 1, 2})
+			.mapToObj(i -> new MappingStatus(states[i], messages[i]))
+			.map(MappingStatus::toString)
+			.map(MappingStatus::fromString)
+			.toList();
 		for (int i = 0; i < states.length; i++) {
-			assertEquals(states[i], list.get(i).type);
-			assertEquals(messages[i], list.get(i).message);
+			assertEquals(states[i], list.get(i).type());
+			assertEquals(messages[i], list.get(i).message());
 		}
 
-		assertNull(Status.fromString(null));
-		assertNull(Status.fromString(""));
+		assertTrue(MappingStatus.fromString(null).isEmpty());
+		assertTrue(MappingStatus.fromString("").isEmpty());
 	}
 
 	@Test
 	public void testCsvIO() throws Exception {
-		FlowMap map = new FlowMap();
-		FlowMapEntry e = new FlowMapEntry();
-		e.sourceFlow = new FlowRef();
-		e.sourceFlow.flow = new FlowDescriptor();
-		e.sourceFlow.flow.refId = "source";
-		e.sourceFlow.status = Status.warn("the source flow");
+		var sourceFlow = new FlowRef();
+		sourceFlow.flow = new FlowDescriptor();
+		sourceFlow.flow.refId = "source";
+		sourceFlow.status = MappingStatus.warn("the source flow");
 
-		e.targetFlow = new FlowRef();
-		e.targetFlow.flow = new FlowDescriptor();
-		e.targetFlow.flow.refId = "target";
-		e.targetFlow.status = Status.error("the target flow");
-		e.factor = 42.0;
-		map.entries.add(e);
+		var targetFlow = new FlowRef();
+		targetFlow.flow = new FlowDescriptor();
+		targetFlow.flow.refId = "target";
+		targetFlow.status = MappingStatus.error("the target flow");
+
+		FlowMap map = new FlowMap();
+		map.entries.add(new FlowMapEntry(sourceFlow, targetFlow, 42));
 
 		File tmpFile = Files.createTempFile(
 				"_olca_" + getClass().getSimpleName(), ".csv").toFile();
 		FlowMap.toCsv(map, tmpFile);
 		map = FlowMap.fromCsv(tmpFile);
-		e = map.entries.get(0);
-		tmpFile.delete();
+		var e = map.entries.get(0);
+		assertTrue(tmpFile.delete());
 
-		assertEquals(Status.warn("the source flow"), e.sourceFlow.status);
-		assertEquals(Status.error("the target flow"), e.targetFlow.status);
+		assertEquals(MappingStatus.warn("the source flow"), e.sourceFlow().status);
+		assertEquals(MappingStatus.error("the target flow"), e.targetFlow().status);
 	}
 
 }
